--- a/ConjurDotNetDemo/ConjurDotNetDemo.csproj
+++ b/ConjurDotNetDemo/ConjurDotNetDemo.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>ConjurDotNetDemo</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
 </Project>
